<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.UserTreatment">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        tools:ignore="Autofill,TextFields" />
    <EditText
        android:id="@+id/et_rocket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rocket"
        tools:ignore="Autofill,TextFields"/>
    <EditText
        android:id="@+id/et_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/twitter"
        tools:ignore="Autofill,TextFields"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"/>
    <Button
        android:id="@+id/btn_delete"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/delete"/>

</LinearLayout>